[project]
name = "reddit-crawler"
version = "0.1.0"
description = "A Python script to crawl Reddit user information with JSON storage"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "praw>=7.7.1"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
]

[project.scripts]
reddit-crawler = "reddit_crawler:crawler"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["reddit_crawler.py"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
